--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <style>
+      * {
+        box-sizing: border-box;
+      }
+      #app{
+        /* width: 100%; */
+        background-color: rgb(230, 230, 230);
+      }
+      img{
+        float: left;
+      }
+      .bfc{
+        /* float: left; */
+        overflow: hidden;
+        /* position: absolute; */
+      }
+    </style>
+  </head>
+  <body>
+    <div id="app" class="bfc">
+      <img src="./img/image.jpg" alt="">
+      <p class="bfc">你好，我五黑热风his啊哈第三方IU收到货比方说丢..</p>
+    </div>
+    <script>
+      
+    </script>
+  </body>
+</html>
 
