--- a/index.html
+++ b/index.html
@@ -4,33 +4,103 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>3D 立方体</title>
     <style>
       * {
+        padding: 0;
+        margin: 0;
         box-sizing: border-box;
       }
+      body{
+        height: 100vh;
+        display: flex;
+        background-image: linear-gradient(red,green);
+        justify-content: center;
+        align-items: center;
+      }
       #app{
-        /* width: 100%; */
-        background-color: rgb(230, 230, 230);
+        width: 200px;
+        height: 200px;
+        position: relative;
+        transform-style: preserve-3d;
+        /* animation: app 10s infinite linear; */
+        transform: rotateX(0) rotateY(0) rotateZ(0);
+        font-size: 30px;
       }
-      img{
-        float: left;
+      #app:hover{
+        animation-play-state: paused;
       }
-      .bfc{
-        /* float: left; */
-        overflow: hidden;
-        /* position: absolute; */
+      #app .item{
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 200px;
+        height: 200px;
+        opacity: 0.8;
+        color: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+      .item0{
+        background-color: rgb(50, 37, 163);
+        transform: translateZ(100px);
+      }
+      .item1{
+        background-color: rgb(126, 60, 60);
+        transform: rotatex(90deg) translateZ(-100px);
+      }
+      .item2{
+        background-color: rgb(60, 126, 82);
+        transform: translateZ(-100px);
+      }
+      .item3{
+        background-color: rgb(112, 126, 60);
+        transform: rotateY(90deg) translateZ(-100px);
+      }
+      .item4{
+        background-color: rgb(218, 198, 19);
+        transform: rotateY(90deg) translateZ(100px);
+      }
+      .item5{
+        background-color: rgb(126, 60, 93);
+        transform: rotateX(90deg) translateZ(100px);
+      }
+      @keyframes app {
+        0%,100%{
+          transform: rotateX(0) rotateY(0) rotateZ(0);
+        }
+        50%{
+          transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+        }
       }
     </style>
   </head>
   <body>
-    <div id="app" class="bfc">
-      <img src="./img/image.jpg" alt="">
-      <p class="bfc">你好，我五黑热风his啊哈第三方IU收到货比方说丢..</p>
+    <div id="app">
+      <div class="item item0">0</div>
+      <div class="item item1">1</div>
+      <div class="item item2">2</div>
+      <div class="item item3">3</div>
+      <div class="item item4">4</div>
+      <div class="item item5">5</div>
     </div>
     <script>
-      
+      let x = 0;y = 0;z = 0;
+      let app = document.getElementById("app");
+      setInterval(() => {
+        ++x;++y;++z;
+        if (x > 360) {
+          x = 1
+        }
+        if (y > 360) {
+          y = 1
+        }
+        if (z > 360) {
+          z = 1
+        }
+        app.style.transform = "rotateX(" + x +"deg) rotateY(" + y +"deg) rotateZ(" + z +"deg)"
+      }, 20);
     </script>
   </body>
 </html>
-
